# example-token

./: .gitignore  .travis.yml  README.md  package-lock.json  package.json  url.js
flow-typed/: tweetnacl.js
src/cli/: main.js  token-test.js
src/client/: client.js  token.js
src/client/util/: new-account-with-lamports.js  send-and-confirm-transaction.js
src/program/: Cargo.toml  README.md  do.sh
src/program-test/: Cargo.toml
src/program-test/tests/: bench.rs
src/program-tests/: Cargo.toml
src/program-tests/tests/: bench.rs  state.rs
src/program/src/: error.rs  lib.rs  processor.rs  simple_serde.rs  state.rs
test/: .eslintrc.js  new-account-with-lamports.js  token.test.js
test/mockrpc/: get-recent-blockhash.js
