
# Note: This crate must be built using do.sh

[package]
name = "solana-bpf-token-tests"
version = "0.1.0"
description = "Example token program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
byteorder = "1.3.2"
num-derive = "0.2"
num-traits = "0.2"
solana-bpf-token = { path = "../program" }
solana-sdk = { version = "=1.0.5", default-features = false, features=["program"] }
solana-sdk-bpf-test = { path = "../../node_modules/@solana/web3.js/bpf-sdk/rust/test", default-features = false }
solana-bpf-loader-program = { version = "=1.0.5" }
solana-logger = { version = "=1.0.5" }

