
# Note: This crate must be built using do.sh

[package]
name = "solana-bpf-token-tests"
version = "0.1.0"
description = "Example token program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

# [dependencies]
# bincode = "1.1.4"
# num-derive = "0.2"
# num-traits = "0.2"
# serde = "1.0.100"
# serde_derive = "1.0.100"

# solana-sdk-foo = { path = "../../../../active/solana/sdk/", package = "solana-sdk", features = ["program"] }

[dev_dependencies]
solana-bpf-token = { path = "../program" }
solana-sdk = { path = "../../../../active/solana/sdk/" }
solana-sdk-bpf-test = { path = "../../../../active/solana/sdk/bpf/rust/test" }

# [features]
# program = ["solana-sdk/program"]
# default = ["program"]

# [lib]
# name = "solana_bpf_token"
# crate-type = ["cdylib"]
