
[package]
name = "solana-bpf-token-tests"
version = "0.1.0"
description = "Example token program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dev_dependencies]
solana-bpf-loader-program = { path = "../../../../active/solana/programs/bpf_loader" }
solana-bpf-token = { path = "../program" }
solana-logger = { path = "../../../../active/solana/logger" }
solana-sdk = { path = "../../../../active/solana/sdk/" }

