
# Note: This crate must be built using do.sh

[package]
name = "solana-bpf-erc20-token"
version = "0.1.0"
description = "ERC20 token program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
bincode = "1.1.4"
num-derive = "0.2"
num-traits = "0.2"
serde = "1.0.100"
serde_derive = "1.0.100"
solana-sdk = { git = "https://github.com/solana-labs/solana", default-features = false }

[features]
program = ["solana-sdk/program"]
default = ["program"]

[workspace]
members = []

[lib]
name = "solana_bpf_erc20_token"
crate-type = ["cdylib"]
