
# Note: This crate must be built using do.sh

[package]
name = "solana-bpf-token"
version = "0.1.0"
description = "Example token program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
num-derive = "0.2"
num-traits = "0.2"
solana-sdk = { version = "=1.0.4", default-features = false, features=["program"] }
solana-sdk-bpf-test = { git = "https://github.com/solana-labs/solana", default-features = false }
thiserror = "1.0"

[lib]
name = "solana_bpf_token"
crate-type = ["cdylib", "lib"]
